--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,24 +1,34 @@
-name: Build
-on: [push, pull_request]
+name: Go Build
+on:
+  push:
+    branches:
+      - 'master'
+      - 'releases/v*'
+    tags:
+      - 'v*'
 jobs:
 
   build:
-    name: go test
+    name: Build
     runs-on: ubuntu-latest
     steps:
 
       - name: Set up Go
-        uses: actions/setup-go@v2-beta
+        uses: actions/setup-go@v2
         with:
           # Version here has to match one returned via https://golang.org/dl/?mode=json&include=all
-          go-version: '1.14'
+          go-version: '1.16.5'
         id: go
 
       - name: Check out code into the Go module directory
         uses: actions/checkout@v2
 
+      - name: Unshallow
+        if: success() && startsWith(github.ref, 'refs/tags/v')
+        run: git fetch --prune --unshallow
+
       - name: Cache go module
-        uses: actions/cache@v1
+        uses: actions/cache@v2
         with:
           path: ~/go/pkg/mod
           key: ${{ runner.os }}-go-${{ hashFiles('**/go.sum') }}
@@ -26,36 +36,35 @@ jobs:
             ${{ runner.os }}-go-
 
       - name: Build and Test
-        run: go test -v ./...
+        run: go test -v -race -cover ./...
 
-  docker:
+  Docker-Image:
     runs-on: ubuntu-latest
     needs: build
-    name: docker build/publish
+    name: Docker Build, Tag, Push
+
     steps:
-    - name: Checkout
-      uses: actions/checkout@v1
+      - name: Checkout
+        uses: actions/checkout@v1
 
-    # Don't publish on initial commit. After initial commit, this step can be removed.
-    - name: Guard on Initial Commit
-      run: |
-        [[ $(git log --format=oneline | wc -l | tr -cd '[:digit:]') = 1 ]] && exit 1
-        exit 0
-    - name: Docker Login Github
-      if: github.ref == 'refs/heads/master'
-      run: >-
-        echo "${{ secrets.GITHUB_TOKEN }}"
-        | docker login -u ${GITHUB_ACTOR} --password-stdin docker.pkg.github.com
+      - name: Docker Login
+        if: success()
+        env:
+          DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
+          DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
+        run: |
+          echo "${DOCKER_PASSWORD}" | docker login --username "${DOCKER_USERNAME}" --password-stdin
 
-    - name: Build
-      if: github.ref == 'refs/heads/master'
-      run: docker build -t docker.pkg.github.com/${GITHUB_REPOSITORY}/${GITHUB_REPOSITORY#*/}:latest --build-arg APP_NAME=${GITHUB_REPOSITORY#*/} .
+      - name: GoReleaser
+        uses: goreleaser/goreleaser-action@v2.4.1
+        if: success()
+        env:
+          GITHUB_TOKEN: ${{ secrets.GH_PAT }}
+        with:
+          version: latest
+          args: release --rm-dist
 
-    - name: Publish Latest to GitHub Package Registry
-      if: github.ref == 'refs/heads/master'
-      run: docker push docker.pkg.github.com/${GITHUB_REPOSITORY}/${GITHUB_REPOSITORY#*/}:latest
-
-    - name: Clear
-      if: always() && github.ref == 'refs/heads/master'
-      run: |
-        rm -f ${HOME}/.docker/config.json
+      - name: Clear
+        if: always()
+        run: |
+          rm -f ${HOME}/.docker/config.json
