--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -3,6 +3,7 @@ before:
   hooks:
     # You may remove this if you don't use go modules.
     - go mod download
+    - go get golang.org/x/tools/cmd/stringer
     # you may remove this if you don't need go generate
     - go generate ./...
 builds:
@@ -58,20 +59,33 @@ changelog:
       - '^wip:'
       - '^WIP:'
 dockers:
-  -
-    goos: linux
+  - goos: linux
     goarch: 386
 
     image_templates:
-      - "docker.pkg.github.com/{{ .Env.GITHUB_ACTOR }}/{{ .ProjectName }}/{{ .ProjectName }}:latest"
-      - "docker.pkg.github.com/{{ .Env.GITHUB_ACTOR }}/{{ .ProjectName }}/{{ .ProjectName }}:{{ .Tag }}"
-      # - "docker.pkg.github.com/{{ .Env.GITHUB_ACTOR }}/{{ .ProjectName }}/{{ .ProjectName }}:v{{ .Major }}"
+      - "jimschubert/{{ .ProjectName }}:latest"
+      - "jimschubert/{{ .ProjectName }}:{{ .Tag }}"
+      - "jimschubert/{{ .ProjectName }}:v{{ .Major }}"
 
     dockerfile: release.Dockerfile
 
     build_flag_templates:
-      - "--label=org.opencontainers.image.created={{ .Date }}"
-      - "--label=org.opencontainers.image.name={{ .ProjectName }}"
-      - "--label=org.opencontainers.image.revision={{ .FullCommit }}"
-      - "--label=org.opencontainers.image.version={{ .Version }}"
-      - "--build-arg=APP_NAME={{ .ProjectName }}"
+      - "--label=org.opencontainers.image.created={{.Date}}"
+      - "--label=org.opencontainers.image.name={{.ProjectName}}"
+      - "--label=org.opencontainers.image.revision={{.FullCommit}}"
+      - "--label=org.opencontainers.image.version={{.Version}}"
+
+#brews:
+#  - tap:
+#      owner: jimschubert
+#      name: homebrew-tap
+#    folder: Formula
+#    homepage:  https://github.com/jimschubert/docked
+#    description: A Dockerfile linter
+#    license: Apache 2.0
+#    test: |
+#      system "#{bin}/docked -v"
+#    dependencies:
+#      - name: go
+#    install: |-
+#      bin.install "docked"
