--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -17,7 +17,7 @@ jobs:
         uses: actions/setup-go@v2
         with:
           # Version here has to match one returned via https://golang.org/dl/?mode=json&include=all
-          go-version: &goversion '1.17'
+          go-version: '1.17'
         id: go
 
       - name: Check out code into the Go module directory
@@ -68,7 +68,7 @@ jobs:
       - name: Set up Go
         uses: actions/setup-go@v2
         with:
-          go-version: *goversion
+          go-version: '1.17'
 
       - name: GoReleaser
         uses: goreleaser/goreleaser-action@v2.7.0
