--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -20,7 +20,7 @@ jobs:
           go-version: '1.17'
         id: go
 
-      - name: Check out code into the Go module directory
+      - name: Checkout
         uses: actions/checkout@v2
 
       - name: Cache go module
@@ -34,16 +34,54 @@ jobs:
       - name: Build and Test
         run: go test -v -race -cover ./...
 
-  Docker-Image:
+  goreleser-branch:
+    if: !startsWith(github.ref, 'refs/tags/')
     runs-on: ubuntu-latest
     env:
       DOCKER_CLI_EXPERIMENTAL: "enabled"
     needs: build
-    name: Docker Build, Tag, Push
+    name: goreleaser (branch)
 
     steps:
       - name: Checkout
-        uses: actions/checkout@v1
+        uses: actions/checkout@v2
+        with:
+          fetch-depth: 0
+
+      - name: Setup Docker Buildx
+        uses: docker/setup-buildx-action@v1
+
+      - name: Set up Go
+        uses: actions/setup-go@v2
+        with:
+          go-version: '1.17'
+
+      - name: GoReleaser
+        uses: goreleaser/goreleaser-action@v2.7.0
+        if: success()
+        env:
+          GITHUB_TOKEN: ${{ secrets.GH_PAT }}
+          # Your GoReleaser Pro key, if you are using the 'goreleaser-pro' distribution
+          # GORELEASER_KEY: ${{ secrets.GORELEASER_KEY }}
+        with:
+          # either 'goreleaser' (default) or 'goreleaser-pro'
+          distribution: goreleaser
+          version: latest
+          args: release --rm-dist
+
+  goreleaser-release:
+    if: startsWith(github.ref, 'refs/tags/')
+    runs-on: ubuntu-latest
+    env:
+      DOCKER_CLI_EXPERIMENTAL: "enabled"
+    needs: build
+    name: goreleaser (release)
+
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v2
+        with:
+          fetch-depth: 0
 
       - name: Setup Docker Buildx
         uses: docker/setup-buildx-action@v1
@@ -66,7 +104,43 @@ jobs:
         with:
           go-version: '1.17'
 
-      - name: GoReleaser
+      - name: Find Last Tag
+        id: last
+        uses: jimschubert/query-tag-action@v1
+        with:
+          include: 'v*'
+          exclude: '*-rc*'
+          commit-ish: 'HEAD~'
+          skip-unshallow: 'true'
+
+      - name: Find Current Tag
+        id: current
+        uses: jimschubert/query-tag-action@v1
+        with:
+          include: 'v*'
+          exclude: '*-rc*'
+          commit-ish: '@'
+          skip-unshallow: 'true'
+
+      - name: Create Changelog
+        id: changelog
+        uses: jimschubert/beast-changelog-action@v1
+        with:
+          GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
+          CONFIG_LOCATION: .github/changelog.yml
+          FROM: ${{steps.last.outputs.tag}}
+          TO: ${{steps.current.outputs.tag}}
+          OUTPUT: .github/CHANGELOG.md
+
+      - name: View Changelog
+        run: cat .github/CHANGELOG.md
+
+      - name: Check goreleaser
+        uses: goreleaser/goreleaser-action@v2.7.0
+        with:
+          args: check
+
+      - name: Execute goreleaser
         uses: goreleaser/goreleaser-action@v2.7.0
         if: success()
         env:
@@ -76,5 +150,4 @@ jobs:
         with:
           # either 'goreleaser' (default) or 'goreleaser-pro'
           distribution: goreleaser
-          version: latest
-          args: release --rm-dist
+          args: release --rm-dist --release-notes .github/CHANGELOG.md
