--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -35,7 +35,7 @@ jobs:
         run: go test -v -race -cover ./...
 
   goreleser-branch:
-    if: !startsWith(github.ref, 'refs/tags/')
+    if: false == startsWith(github.ref, 'refs/tags/')
     runs-on: ubuntu-latest
     env:
       DOCKER_CLI_EXPERIMENTAL: "enabled"
