--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
+# ignore generated changelogs so goreleaser won't consider the repo "dirty"
+.github/CHANGELOG.md
 dist/
 
 # Created by .ignore support plugin (hsz.mobi)
