--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -8,8 +8,8 @@ on:
       - main
   pull_request:
 jobs:
-  golangci:
-    name: lint
+  Linting:
+    name: Lint with golangci
     runs-on: ubuntu-latest
     steps:
       - uses: actions/setup-go@v2
