--- a/testdata/config/example_custom.yml
+++ b/testdata/config/example_custom.yml
@@ -1,6 +1,7 @@
 ignore:
   - D7:tagged-latest
   - D7:tagged-latest-builder
+  - D3:avoid-copy-all
 rule_overrides:
   'D5:secret-aws-access-key': low
   'D5:secret-aws-secret-access-key': critical_priority
