feat: support config of subset of default rules
This introduces skip_default_rules (bool) and include_rules ([]string)
configuration options. These options allow the user to include only a
small set of the default rules. This simplifies, for example, if the
user wants only a list of custom regex-based rules. It also simplifies
the example tests which validate output as they no longer need to be
updated as new rules are added.

--- a/testdata/config/example.yml
+++ b/testdata/config/example.yml
@@ -1,7 +1,14 @@
-ignore:
-  - D7:tagged-latest
-  - D7:tagged-latest-builder
-  - D3:avoid-copy-all
+skip_default_rules: true
+include_rules:
+  - D5:no-debian-frontend
+  - D5:secret-aws-access-key
+  - D5:secret-aws-secret-access-key
+  - DC:avoid-sudo
+  - DC:consider-multistage
+  - DC:curl-without-fail
+  - DC:gpg-without-batch
+  - DC:gpg-without-batch
+  - DC:layered-ownership-change
 rule_overrides:
   'D5:secret-aws-access-key': low
   'D5:secret-aws-secret-access-key': critical_priority
