workflow: simplify configs and goreleaser pattern

--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -31,15 +31,9 @@ builds:
     # Default is `.`.
     main: ./cmd/docked/
 archives:
-  - replacements:
-      darwin: Darwin
-      linux: Linux
-      windows: Windows
-      386: i386
-      amd64: x86_64
-
+  - name_template: '{{ .ProjectName }}_{{ .Os }}_{{ .Arch }}{{ if .Arm }}v{{ .Arm }}{{ end }}'
     format: tar.gz
-
+    rlcp: true
     format_overrides:
       - goos: windows
         format: zip
