--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -13,15 +13,16 @@ jobs:
     runs-on: ubuntu-latest
     steps:
 
-      - name: Set up Go
-        uses: actions/setup-go@v2
-        with:
-          # Version here has to match one returned via https://golang.org/dl/?mode=json&include=all
-          go-version: '1.17'
-        id: go
-
       - name: Checkout
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
+        with:
+          fetch-depth: 0
+
+      - name: Set up Go
+        uses: actions/setup-go@v3
+        with:
+          go-version-file: go.mod
+        id: go
 
       - name: Cache go module
         uses: actions/cache@v2
@@ -44,7 +45,7 @@ jobs:
 
     steps:
       - name: Checkout
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
         with:
           fetch-depth: 0
 
@@ -52,12 +53,12 @@ jobs:
         uses: docker/setup-buildx-action@v1
 
       - name: Set up Go
-        uses: actions/setup-go@v2
+        uses: actions/setup-go@v3
         with:
-          go-version: '1.17'
+          go-version-file: go.mod
 
       - name: GoReleaser
-        uses: goreleaser/goreleaser-action@v2.7.0
+        uses: goreleaser/goreleaser-action@v4
         if: success()
         env:
           GITHUB_TOKEN: ${{ secrets.GH_PAT }}
@@ -79,7 +80,7 @@ jobs:
 
     steps:
       - name: Checkout
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
         with:
           fetch-depth: 0
 
@@ -100,9 +101,9 @@ jobs:
           password: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Set up Go
-        uses: actions/setup-go@v2
+        uses: actions/setup-go@v3
         with:
-          go-version: '1.17'
+          go-version-file: go.mod
 
       - name: Find Last Tag
         id: last
@@ -136,12 +137,12 @@ jobs:
         run: cat .github/CHANGELOG.md
 
       - name: Check goreleaser
-        uses: goreleaser/goreleaser-action@v2.7.0
+        uses: goreleaser/goreleaser-action@v4
         with:
           args: check
 
       - name: Execute goreleaser
-        uses: goreleaser/goreleaser-action@v2.7.0
+        uses: goreleaser/goreleaser-action@v4
         if: success()
         env:
           GITHUB_TOKEN: ${{ secrets.GH_PAT }}
