--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -7,15 +7,16 @@ jobs:
     runs-on: ubuntu-latest
     steps:
 
-      - name: Set up Go
-        uses: actions/setup-go@v2
-        with:
-          # Version here has to match one returned via https://golang.org/dl/?mode=json&include=all
-          go-version: '1.17'
-        id: go
-
       - name: Check out code into the Go module directory
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
+        with:
+          fetch-depth: 0
+
+      - name: Set up Go
+        uses: actions/setup-go@v3
+        with:
+          go-version-file: go.mod
+        id: go
 
       - name: Cache go module
         uses: actions/cache@v2
