--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -1,9 +1,10 @@
 # Check the documentation at http://goreleaser.com
+version: 2
 before:
   hooks:
     # You may remove this if you don't use go modules.
     - go mod download
-    - go install golang.org/x/tools/cmd/stringer@v0.5.0
+    - go install golang.org/x/tools/cmd/stringer@v0.33.0
     # you may remove this if you don't need go generate
     - go generate ./...
 builds:
@@ -19,30 +20,30 @@ builds:
       - windows
     goarch:
       - amd64
-      - 386
+      - '386'
       - arm
       - arm64
     ignore:
       - goos: darwin
-        goarch: 386
+        goarch: "386"
       - goos: windows
-        goarch: 386
+        goarch: "386"
     # Path to main.go file or main package.
     # Default is `.`.
     main: ./cmd/docked/
 archives:
   - name_template: '{{ .ProjectName }}_{{ .Os }}_{{ .Arch }}{{ if .Arm }}v{{ .Arm }}{{ end }}'
-    format: tar.gz
+    formats: [ tar.gz ]
     format_overrides:
       - goos: windows
-        format: zip
+        formats: [ zip ]
     files:
       - LICENSE
       - README.md
 checksum:
   name_template: 'checksums.txt'
 snapshot:
-  name_template: "{{ .Tag }}-next"
+  version_template: "{{ .Tag }}-next"
 changelog:
   sort: desc
   filters:
@@ -51,38 +52,13 @@ changelog:
       - '^\[doc[s]?\]'
       - '^[wW][iI][pP]:'
       - '^[tT][eE][sS][tT]:'
-dockers:
-  - goos: linux
-    goarch: amd64
-    use: buildx
-    image_templates:
-      - "jimschubert/{{ .ProjectName }}:latest"
-      - "jimschubert/{{ .ProjectName }}:{{ .Tag }}"
-      - "jimschubert/{{ .ProjectName }}:v{{ .Major }}"
-      - "ghcr.io/jimschubert/{{ .ProjectName }}:latest"
-      - "ghcr.io/jimschubert/{{ .ProjectName }}:{{ .Tag }}"
-      - "ghcr.io/jimschubert/{{ .ProjectName }}:v{{ .Major }}"
-
-    dockerfile: release.Dockerfile
-
-    build_flag_templates:
-      - "--pull"
-      - "--label=org.opencontainers.image.title=jimschubert/{{ .ProjectName }}"
-      - "--label=org.opencontainers.image.description=A Dockerfile linter"
-      - "--label=org.opencontainers.image.licenses=Apache-2.0"
-      - "--label=org.opencontainers.image.created={{ .Date }}"
-      - "--label=org.opencontainers.image.name={{ .ProjectName }}"
-      - "--label=org.opencontainers.image.revision={{ .FullCommit }}"
-      - "--label=org.opencontainers.image.version={{ .Version }}"
-      - "--label=org.opencontainers.image.url=https://github.com/jimschubert/docked"
-      - "--platform=linux/amd64"
 
 brews:
   - repository:
       owner: jimschubert
       name: homebrew-tap
       token: "{{ .Env.TAP_GITHUB_TOKEN }}"
-    folder: Formula
+    directory:  Formula
     homepage:  https://github.com/jimschubert/docked
     description: A Dockerfile linter
     license: Apache 2.0
