--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -125,4 +125,4 @@ jobs:
         with:
           # either 'goreleaser' (default) or 'goreleaser-pro'
           distribution: goreleaser
-          args: release --rm-dist ${{ env.flags }}
+          args: release --clean ${{ env.flags }}
