--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -4,7 +4,9 @@ before:
   hooks:
     # You may remove this if you don't use go modules.
     - go mod download
-    - go install golang.org/x/tools/cmd/stringer@v0.33.0
+    # upgrade stringer after upgrading Go to latest version
+    # - go install golang.org/x/tools/cmd/stringer@v0.33.0
+    - go install golang.org/x/tools/cmd/stringer@v0.5.0
     # you may remove this if you don't need go generate
     - go generate ./...
 builds:
